Istio/02-Traffic_management/09-TCP-FORWARDING/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: tcp-1
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 443
        name: tcp-2
        protocol: TCP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  tcp:
    - match:
        - port: 80
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - port: 443
      route:
        - destination:
            host:  helloworld.default.svc.cluster.local
            port:
              number: 8443
